--- a/styles/bio.css
+++ b/styles/bio.css
@@ -821,7 +821,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 4rem;
+  padding: 6rem;
   margin: 0;
   background: url(../assets/images/hero-shows.jpg);
   background-position: center;
@@ -919,6 +919,12 @@ body {
   padding-top: 1.5rem;
   padding: 1.5rem 1rem 0 1rem;
 }
+@media (min-width: 1280px) {
+  .shows {
+    padding-left: 30vw;
+    padding-right: 6rem;
+  }
+}
 .shows--tablet-header {
   display: flex;
   flex-direction: row;
@@ -930,6 +936,11 @@ body {
   font-size: 36px;
   line-height: 44px;
   margin-bottom: 0;
+}
+@media (min-width: 1280px) {
+  .shows__header {
+    padding-left: 10rem;
+  }
 }
 .shows__details {
   display: flex;
@@ -995,6 +1006,11 @@ body {
 }
 .shows__details--tablet {
   display: none;
+}
+@media (min-width: 1280px) {
+  .shows__details--tablet {
+    flex-direction: column;
+  }
 }
 @media (min-width: 768px) {
   .shows__details--tablet {
