--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -901,7 +901,8 @@ body {
   @include global.flexBox-column;
   align-items: center;
   justify-content: center;
-  padding: 4rem;
+  padding: 6rem;
+  // height: 100vh;
   margin: 0;
   background: url(../assets/images/hero-shows.jpg);
   background-position: center;
@@ -1005,16 +1006,17 @@ body {
 
 
 .shows {
-  // display: flex;
-  // flex-direction: column;
   @include global.flexBox-column;
   flex-wrap: nowrap;
   padding-top: 1.5rem;
   padding: 1.5rem 1rem 0 1rem;
 
-  
+  @include desktop{
+    padding-left: 30vw;
+    padding-right: 6rem
+  }
 
-  
+
   &--tablet-header{
     @include global.flexBox-row;
   }
@@ -1027,6 +1029,9 @@ body {
     font-size: 36px;
     line-height: 44px;
     margin-bottom: 0;
+    @include desktop{
+      padding-left: 10rem;
+    }
   }
 
   &__details {
@@ -1092,6 +1097,10 @@ body {
     }
 
     &--tablet{
+
+      @include desktop{
+        flex-direction: column;
+      }
       display: none;
       @include tablet{
       padding-left: 1rem;
