--- a/styles/bio.css
+++ b/styles/bio.css
@@ -33,12 +33,38 @@ body {
   background-color: #323232;
   display: flex;
   flex-direction: column;
+  padding: 1rem 0;
   justify-content: center;
   align-items: center;
   color: white;
 }
+.nav-bar__list-item {
+  font-family: "avenirnext-bold";
+}
+.nav-bar__list-item:hover {
+  color: white;
+  font-family: "avenirnext-bold";
+}
+.nav-bar__list-item:not(:active) {
+  color: #e1e1e1;
+}
 .nav-bar__top {
   padding-top: 1rem;
+}
+@media (min-width: 1280px) {
+  .nav-bar {
+    padding-left: 4rem;
+  }
+  .nav-bar__list-item {
+    font-family: "avenirnext-bold";
+  }
+  .nav-bar__list-item:hover {
+    color: white;
+    font-family: "avenirnext-bold";
+  }
+  .nav-bar__list-item:not(:active) {
+    color: #e1e1e1;
+  }
 }
 @media (min-width: 768px) {
   .nav-bar {
@@ -86,6 +112,31 @@ body {
     padding-right: 2rem;
     border: none;
   }
+  .nav-bar__list-item:hover {
+    color: white;
+    font-family: "avenirnext-bold";
+  }
+  .nav-bar__list-item:not(:active) {
+    color: #e1e1e1;
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  .nav-bar__list-item:hover {
+    color: white;
+    font-family: "avenirnext-bold";
+  }
+  .nav-bar__list-item:not(:active) {
+    color: #e1e1e1;
+  }
+}
+@media (min-width: 768px) and (min-width: 1280px) {
+  .nav-bar__list-item:hover {
+    color: white;
+    font-family: "avenirnext-bold";
+  }
+  .nav-bar__list-item:not(:active) {
+    color: #e1e1e1;
+  }
 }
 @media (min-width: 1280px) {
   .nav-bar {
@@ -130,10 +181,15 @@ body {
 .nav-bar__list-container {
   display: flex;
   flex-direction: column;
+  color: #fafafa;
   flex-wrap: nowrap;
   justify-content: space-between;
   width: 50%;
   text-align: center;
+}
+.nav-bar__list-container:hover {
+  color: white;
+  font-family: "avenirnext-regular";
 }
 .nav-bar__list-container-selected {
   border-bottom: 0.25rem white solid;
@@ -577,6 +633,7 @@ body {
   text-transform: uppercase;
   font-family: "avenirnext-demi";
   line-height: 20px;
+  padding: 0.25rem 0;
   color: rgba(175, 175, 175, 0.6862745098);
 }
 
@@ -712,12 +769,25 @@ body {
 .conversation__nameinput {
   height: 2rem;
   width: auto;
-  background-color: #e1e1e1;
+  background-color: #fafafa;
   border-radius: 0.5rem;
   padding: 1rem;
   border: solid 1px #e1e1e1;
 }
-.conversation__nameinput::-moz-placeholder {
+.conversation__nameinput:focus {
+  outline: none;
+  border: #323232 1px solid;
+  background-color: #fafafa;
+}
+.conversation__nameinput:invalid {
+  outline: none;
+  border: #D22D2D;
+  background-color: #fafafa;
+}
+.conversation__nameinput:valid {
+  background-color: #fafafa;
+}
+.conversation__nameinput:-moz-placeholder-shown {
   color: #000000;
   font-family: "avenirnext-regular";
 }
@@ -725,16 +795,20 @@ body {
   color: #000000;
   font-family: "avenirnext-regular";
 }
-.conversation__nameinput::placeholder {
+.conversation__nameinput:placeholder-shown {
   color: #000000;
   font-family: "avenirnext-regular";
 }
 .conversation__commentinput {
   height: 20vh;
-  background-color: #e1e1e1;
+  background-color: #fafafa;
   border-radius: 0.5rem;
   padding: 1rem;
   border: solid 1px #e1e1e1;
+}
+.conversation__commentinput:focus {
+  outline: none;
+  border: #323232 1px solid;
 }
 .conversation__commentinput::-moz-placeholder {
   color: #000000;
@@ -819,9 +893,8 @@ body {
 .album__header, .album__header--soundcloud--container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  padding: 6rem;
   margin: 0;
   background: url(../assets/images/hero-shows.jpg);
   background-position: center;
@@ -834,6 +907,7 @@ body {
     margin: 0;
     flex-direction: row;
     justify-content: center;
+    padding: 10rem 0;
   }
 }
 .album__header--paragraph {
@@ -841,9 +915,10 @@ body {
   flex-direction: column;
 }
 .album__header--soundcloud--container {
+  display: flex;
   background: none;
   padding: 0;
-  width: 50%;
+  width: 100%;
 }
 @media (min-width: 1280px) {
   .album__header--soundcloud--container {
@@ -851,7 +926,12 @@ body {
   }
 }
 .album__header--soundcloud {
-  width: 20%;
+  width: 100%;
+}
+@media (min-width: 1280px) {
+  .album__header--soundcloud {
+    width: 20%;
+  }
 }
 @media (min-width: 768px) {
   .album__header--soundcloud {
@@ -899,6 +979,7 @@ body {
 
 .soundcloud-iframe {
   padding: 1rem 1rem 2rem 1rem;
+  width: 100%;
 }
 @media (min-width: 1280px) {
   .soundcloud-iframe {
@@ -947,6 +1028,18 @@ body {
   flex-direction: column;
   margin: 0;
   border-bottom: 1.5px #afafaf solid;
+}
+.shows__details:hover {
+  background: #fafafa;
+}
+.shows__details:active {
+  background: #e1e1e1;
+}
+.shows__details::-moz-selection {
+  background: blue;
+}
+.shows__details::selection {
+  background: blue;
 }
 @media (min-width: 768px) {
   .shows__details {
