--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -29,12 +29,42 @@ body {
 .nav-bar {
   background-color: global.$bandsite-black;
   @include global.flexBox-column;
+  padding: 1rem 0;
   justify-content: center;
   align-items: center;
   color: white;
 
+  &__list-item{
+    font-family: global.$avenirnext-bold;
+    // background-color: yellow;
+    &:hover{
+      // background-color: blue;
+      color: white;
+      font-family: global.$avenirnext-bold;
+    }
+    &:not(:active){
+      color: global.$mercury;
+    }
+  }
+
   &__top {
     padding-top: 1rem;
+  }
+
+  @include desktop{
+    padding-left: 4rem;
+    &__list-item{
+      font-family: global.$avenirnext-bold;
+      // background-color: yellow;
+      &:hover{
+        // background-color: blue;
+        color: white;
+        font-family: global.$avenirnext-bold;
+      }
+      &:not(:active){
+        color: global.$mercury;
+      }
+    }
   }
 
   @include tablet {
@@ -91,6 +121,39 @@ body {
         width: 100%;
         padding-right: 2rem;
         border: none;
+        &:hover{
+          // background-color: blue;
+          color: white;
+          // background: blue;
+          font-family: global.$avenirnext-bold;
+        }
+        &:not(:active){
+          color: global.$mercury;
+        }
+
+        @include tablet{
+          &:hover{
+            // background-color: blue;
+            color: white;
+            // background: blue;
+            font-family: global.$avenirnext-bold;
+          }
+          &:not(:active){
+            color: global.$mercury;
+          }
+        }
+
+        @include desktop{
+          &:hover{
+            // background-color: blue;
+            color: white;
+            // background: blue;
+            font-family: global.$avenirnext-bold;
+          }
+          &:not(:active){
+            color: global.$mercury;
+          }
+        }
       }
     }
   }
@@ -139,11 +202,20 @@ body {
       // display: flex;
       // flex-direction: column;
       @include global.flexBox-column;
+      color: global.$alabaster;
       flex-wrap: nowrap;
       justify-content: space-between;
       width: 50%;
       // background: blue;
       text-align: center;
+
+      &:hover{
+        // background-color: blue;
+        color: white;
+        font-family: global.$avenirnext-regular;
+      }
+
+      
       // border-bottom: 0.25rem white solid;
     }
 
@@ -647,6 +719,7 @@ body {
   text-transform: uppercase;
   font-family: global.$avenirnext-demi;
   line-height: 20px;
+  padding: 0.25rem 0;
   color: #afafafaf;
 }
 
@@ -655,11 +728,12 @@ body {
   flex-direction: column;
   background-color: white;
   justify-content: center;
-  @include desktop{
+
+  @include desktop {
     // text-align: left;
     display: flex;
     align-items: center;
-  // padding-left: 10rem;
+    // padding-left: 10rem;
   }
 
   &__header {
@@ -668,7 +742,8 @@ body {
     margin: 1rem 0 0 1rem;
     font-size: 24px;
     line-height: 32px;
-    @include desktop{
+
+    @include desktop {
       padding-left: 10rem;
       display: flex;
       align-items: flex-start;
@@ -683,8 +758,9 @@ body {
     width: 100%;
     padding-right: 1rem;
     justify-content: baseline;
+
     // border-bottom: 1.5px global.$silver solid;
-    @include desktop{
+    @include desktop {
       width: 50%;
       justify-content: center;
     }
@@ -702,7 +778,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
-    @include tablet{
+    @include tablet {
       width: 3rem;
       height: 3rem;
     }
@@ -713,8 +789,9 @@ body {
     flex-direction: row;
     padding-right: 1rem;
     padding-top: 0.5rem;
+
     // border-bottom: 1.5px global.$silver solid;
-    @include tablet{
+    @include tablet {
       padding-left: 3rem;
       // background-color: green;
     }
@@ -747,12 +824,13 @@ body {
     padding-right: 1rem;
     justify-content: baseline;
     border-bottom: 1.5px global.$silver solid;
-    @include tablet{
+
+    @include tablet {
       // padding-left: 3rem;
       // background-color: yellow;
     }
 
-    
+
     &--form {
       display: flex;
       flex-direction: column;
@@ -801,25 +879,47 @@ body {
   &__nameinput {
     height: 2rem;
     width: auto;
-    background-color: global.$mercury;
+    background-color: global.$alabaster;
     border-radius: 0.5rem;
     padding: 1rem;
     border: solid 1px global.$mercury;
 
-    &::placeholder {
+    &:focus{
+      outline: none;
+      border: global.$bandsite-black 1px solid;
+      background-color: global.$alabaster;
+      // background: blue;
+    }
+    &:invalid{
+      outline: none;
+      border: global.$error-color;
+      background-color: global.$alabaster;
+    }
+    &:valid{
+      background-color: global.$alabaster;
+    }
+
+    
+
+    &:placeholder-shown {
       color: global.$bandsitedark-black;
       font-family: global.$avenirnext-regular;
+      // border: global.$bandsite-black 1px solid;
 
     }
   }
 
   &__commentinput {
     height: 20vh;
-    background-color: global.$mercury;
+    background-color: global.$alabaster;
     border-radius: 0.5rem;
     padding: 1rem;
     border: solid 1px global.$mercury;
 
+    &:focus{
+      outline: none;
+      border: global.$bandsite-black 1px solid;
+    }
     &::placeholder {
       color: global.$bandsitedark-black;
       font-family: global.$avenirnext-regular;
@@ -835,13 +935,15 @@ body {
     padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
+
     // border-bottom: 1.5px global.$silver solid;
     // padding-bottom: 1rem;
     @include tablet {
       // background-color: blue;
       padding-left: 3rem;
     }
-    @include desktop{
+
+    @include desktop {
       width: 50%;
     }
 
@@ -898,10 +1000,19 @@ body {
 }
 
 .album__header {
+  // @include global.flexBox-column;
+  // align-items: center;
+  // justify-content: center;
+  // padding: 6rem;
+  // // height: 100vh;
+  // margin: 0;
+  // background: url(../assets/images/hero-shows.jpg);
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   @include global.flexBox-column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  padding: 6rem;
   // height: 100vh;
   margin: 0;
   background: url(../assets/images/hero-shows.jpg);
@@ -910,49 +1021,58 @@ body {
   background-size: cover;
 
 
-  @include desktop{
+  @include desktop {
     // background: lightblue;
     display: flex;
     margin: 0;
     flex-direction: row;
     justify-content: center;
+    padding: 10rem 0;
   }
 
-  &--paragraph{
+  &--paragraph {
     display: flex;
     flex-direction: column;
   }
-  
+
   // opacity: 20%;
   // height: auto;
 
-  &--soundcloud--container{
+  &--soundcloud--container {
     @extend .album__header;
+    display: flex;
     background: none;
     padding: 0;
-    width: 50%;
-    @include desktop{
+    width: 100%; 
+
+    @include desktop {
       width: 40%;
     }
   }
-  &--soundcloud{
+
+  &--soundcloud {
     // @include global.flexBox-column;
     // align-items: flex-start;
     // justify-content: center;
-    width: 20%;
-    
+    width: 100%;
+
+    @include desktop {
+      width: 20%;
+    }
+
+
     @include tablet {
       @include global.flexBox-column;
       align-items: flex-start;
       justify-content: center;
       width: 70%;
       // background-color: green;
-      }
+    }
 
-      @include desktop{
-        width: 100%;
-        padding: 0;
-      }
+    @include desktop {
+      width: 100%;
+      padding: 0;
+    }
   }
 
   &--small {
@@ -962,7 +1082,8 @@ body {
     padding-left: 1rem;
     font-size: 24px;
     line-height: 32px;
-    @include desktop{
+
+    @include desktop {
       display: flex;
     }
   }
@@ -976,7 +1097,8 @@ body {
     font-size: 36px;
     line-height: 44px;
     margin: 0 1rem 0 0;
-    @include desktop{
+
+    @include desktop {
       display: flex;
     }
   }
@@ -984,7 +1106,9 @@ body {
 
 .soundcloud-iframe {
   padding: 1rem 1rem 2rem 1rem;
-  @include desktop{
+  width: 100%;
+
+  @include desktop {
     display: flex;
     padding: 0;
   }
@@ -993,13 +1117,13 @@ body {
   //   background: blue;
   // }
 
-  @include tablet{
+  @include tablet {
     width: 70%;
     // background-color: blue;
     padding: 1rem 2rem;
   }
 
-  @include desktop{
+  @include desktop {
     // background-color: lightblue; 
   }
 }
@@ -1011,13 +1135,12 @@ body {
   padding-top: 1.5rem;
   padding: 1.5rem 1rem 0 1rem;
 
-  @include desktop{
+  @include desktop {
     padding-left: 30vw;
-    padding-right: 6rem
+    padding-right: 6rem;
   }
 
-
-  &--tablet-header{
+  &--tablet-header {
     @include global.flexBox-row;
   }
 
@@ -1029,7 +1152,8 @@ body {
     font-size: 36px;
     line-height: 44px;
     margin-bottom: 0;
-    @include desktop{
+
+    @include desktop {
       padding-left: 10rem;
     }
   }
@@ -1040,7 +1164,18 @@ body {
     margin: 0;
     border-bottom: 1.5px global.$silver solid;
 
-    @include tablet{
+    &:hover{
+      background: global.$alabaster;
+    }
+    &:active{
+      background: global.$mercury;
+    }
+    &::selection{
+      background: blue;
+    }
+
+
+    @include tablet {
       @include global.flexBox-row;
       padding: 1rem;
       align-items: baseline;
@@ -1052,7 +1187,8 @@ body {
       font-family: global.$avenirnext-regular;
       color: global.$silver;
       text-transform: uppercase;
-      @include tablet{
+
+      @include tablet {
         display: none;
       }
     }
@@ -1088,7 +1224,7 @@ body {
       text-transform: uppercase;
       margin: 1rem 0;
 
-      @include tablet{
+      @include tablet {
         padding: 0.75rem 2rem;
         margin: 1rem;
         border: 1px global.$bandsite-black solid;
@@ -1096,23 +1232,25 @@ body {
       }
     }
 
-    &--tablet{
+    &--tablet {
 
-      @include desktop{
+      @include desktop {
         flex-direction: column;
       }
+
       display: none;
-      @include tablet{
-      padding-left: 1rem;
-      @include global.flexBox-row;
-      justify-content: space-between;
-      // width: 50%;
+
+      @include tablet {
+        padding-left: 1rem;
+        @include global.flexBox-row;
+        justify-content: space-between;
+        // width: 50%;
       }
 
-      &-header{
-      font-family: global.$avenirnext-regular;
-      color: global.$silver;
-      text-transform: uppercase;
+      &-header {
+        font-family: global.$avenirnext-regular;
+        color: global.$silver;
+        text-transform: uppercase;
       }
     }
   }
