--- a/styles/bio.css
+++ b/styles/bio.css
@@ -207,6 +207,8 @@ body {
   align-items: flex-start;
   justify-content: center;
   background: url(/assets/images/hero-bio.jpg);
+  background-blend-mode: multiply;
+  background-color: rgba(50, 50, 50, 0.5);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -897,6 +899,8 @@ body {
   justify-content: center;
   margin: 0;
   background: url(../assets/images/hero-shows.jpg);
+  background-blend-mode: multiply;
+  background-color: rgba(50, 50, 50, 0.5);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
