--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -26,147 +26,13 @@ body {
   @include global.uppercase;
 }
 
-.nav-bar {
-  background-color: global.$bandsite-black;
-  @include global.flexBox-column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-
-  @include tablet {
-    justify-content: flex-start;
-    align-items: baseline;
-    flex-direction: row;
-
-    // padding-left: 1rem;
-    &__top {
-      align-items: baseline;
-      align-content: center;
-      justify-content: center;
-      vertical-align: middle;
-    }
-
-    &__heading {
-      font-family: global.$avenirnext-regular;
-      // margin: 0.5rem 0 0 0;
-      padding: 1rem;
-      // text-transform: uppercase;
-      @include global.uppercase;
-      // justify-content: center;
-      align-content: center;
-      align-items: baseline;
-    }
-
-    &__menu-tablet {
-      // background-color: grey;
-      @include global.flexBox-row;
-      justify-content: space-evenly;
-      align-items: baseline;
-      width: 25% !important;
-      padding-left: 1rem;
-    }
-
-    &__list {
-      justify-content: flex-start;
-      align-items: flex-start;
-      margin-bottom: 0;
-
-      &-container-selected {
-        // width: 25%;
-        // background-color: red;
-        @include global.flexBox-column;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        text-align: center;
-        border-bottom: 0.25rem white solid;
-      }
-
-      &-item {
-        // width: 25%;
-        width: 100%;
-        padding-right: 2rem;
-        border: none;
-      }
-    }
-  }
-
-  @include desktop {
-    align-items: center;
-  }
-
-  &-top {
-    margin: 0;
-  }
-
-  &__heading {
-    font-family: global.$avenirnext-regular;
-    margin: 0.5rem 0 0 0;
-    // text-transform: uppercase;
-    @include global.uppercase;
-
-    @include desktop {
-      padding-left: 10rem;
-      font-size: 36px;
-    }
-  }
-
-  &__menu {
-    @include global.flexBox-row;
-    width: 100%;
-    justify-content: space-between;
-
-    @include desktop {
-      font-size: 1rem;
-    }
-  }
-
-  &__list {
-    @include global.flexBox-row;
-    width: 100%;
-    justify-content: space-evenly;
-    text-decoration: none;
-    list-style: none;
-    padding: 0;
-    // Margin bottom to remove the white space bellow so white line is level with div
-    margin-bottom: 0;
-
-    &-container {
-      // display: flex;
-      // flex-direction: column;
-      @include global.flexBox-column;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      width: 50%;
-      // background: blue;
-      text-align: center;
-      // border-bottom: 0.25rem white solid;
-    }
-
-    &-container-selected {
-      border-bottom: 0.25rem white solid;
-    }
-
-    &-item {
-      text-decoration: none;
-      list-style: none;
-      color: white;
-      font-family: global.$avenirnext-demi;
-      padding-bottom: 0.5rem;
-    }
-
-    @include desktop {
-      &-container-selected {
-        // padding-bottom: 1vh;
-      }
-    }
-  }
-}
-
 .bees-knees {
   @include global.flexBox-column;
   align-items: flex-start;
   justify-content: center;
   background: url(/assets/images/hero-bio.jpg);
+  background-blend-mode: multiply;
+  background-color: global.$bandsite-black-rgba;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -590,6 +456,7 @@ body {
     &-right {
       @include global.flexBox-row;
       align-items: baseline;
+      padding-right: 1rem;
     }
   }
 
@@ -634,5 +501,288 @@ body {
   @include tablet {
     display: flex;
     padding: 1rem 0 0 1rem;
+  }
+}
+
+.input-label {
+  text-transform: uppercase;
+  font-family: global.$avenirnext-demi;
+  line-height: 20px;
+  padding: 0.25rem 0;
+  color: #afafafaf;
+}
+
+.conversation {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  justify-content: center;
+
+  @include desktop {
+    // text-align: left;
+    display: flex;
+    align-items: center;
+    // padding-left: 10rem;
+  }
+
+  &__header {
+    font-family: global.$avenirnext-demi;
+    color: global.$bandsite-black;
+    margin: 1rem 0 0 1rem;
+    font-size: 24px;
+    line-height: 32px;
+
+    @include desktop {
+      padding-left: 10rem;
+      display: flex;
+      align-items: flex-start;
+      font-size: 32px;
+      width: 100%;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-right: 1rem;
+    justify-content: baseline;
+
+    // border-bottom: 1.5px global.$silver solid;
+    @include desktop {
+      width: 50%;
+      justify-content: center;
+    }
+  }
+
+  &__img {
+    border-radius: 50%;
+    width: 2.25rem;
+    height: 2.25rem;
+    display: flex;
+    flex-direction: row;
+    background: url(../assets/images/Mohan-muruge.jpg);
+    background-color: global.$silver;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include tablet {
+      width: 3rem;
+      height: 3rem;
+    }
+  }
+
+  &__left {
+    display: flex;
+    flex-direction: row;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+
+    // border-bottom: 1.5px global.$silver solid;
+    @include tablet {
+      padding-left: 3rem;
+      // background-color: green;
+    }
+  }
+
+  &__top {
+    // padding-left: 1rem;
+    padding: 1rem 0 0 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    &--img {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &--left {
+      padding: 0 1rem;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+
+  &__right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-right: 1rem;
+    justify-content: baseline;
+    border-bottom: 1.5px global.$silver solid;
+
+    @include tablet {
+      // padding-left: 3rem;
+      // background-color: yellow;
+    }
+
+    &--form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding-right: 1rem;
+      justify-content: baseline;
+      // border-bottom: 1.5px global.$silver solid;
+    }
+
+    &--header {
+      margin: 0;
+    }
+
+    &--commentbutton {
+      margin: 1rem 0;
+      padding: 0.5rem 1rem;
+      background: global.$bandsite-black;
+      font-size: 1.5rem;
+      text-align: center;
+      border: 0.5rem global.$bandsite-black solid;
+      border-radius: 0.5rem;
+      color: white;
+      font-family: global.$avenirnext-regular;
+    }
+
+    &__top {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__bottom {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: row;
+    padding-left: 1rem;
+    // border-bottom: 1.5px global.$silver solid;
+    // padding-right: 1rem;
+    padding: 0 1rem;
+  }
+
+  &__nameinput {
+    height: 2rem;
+    width: auto;
+    background-color: global.$alabaster;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    border: solid 1px global.$mercury;
+
+    &:focus {
+      outline: none;
+      border: global.$bandsite-black 1px solid;
+      background-color: global.$alabaster;
+      // background: blue;
+    }
+
+    &:invalid {
+      outline: none;
+      border: global.$error-color;
+      background-color: global.$alabaster;
+    }
+
+    &:valid {
+      background-color: global.$alabaster;
+    }
+
+    &:placeholder-shown {
+      color: global.$bandsitedark-black;
+      font-family: global.$avenirnext-regular;
+      // border: global.$bandsite-black 1px solid;
+    }
+  }
+
+  &__commentinput {
+    height: 20vh;
+    background-color: global.$alabaster;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    border: solid 1px global.$mercury;
+
+    &:focus {
+      outline: none;
+      border: global.$bandsite-black 1px solid;
+    }
+
+    &::placeholder {
+      color: global.$bandsitedark-black;
+      font-family: global.$avenirnext-regular;
+      display: flex;
+      position: absolute;
+      top: 1px;
+      font-size: 12px;
+    }
+  }
+
+  //conversation__users
+  &__users {
+    padding: 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+
+    // border-bottom: 1.5px global.$silver solid;
+    // padding-bottom: 1rem;
+    @include tablet {
+      // background-color: blue;
+      padding-left: 3rem;
+    }
+
+    @include desktop {
+      width: 50%;
+    }
+
+    &--container {
+      padding: 1rem 1rem;
+      display: flex;
+      flex-direction: row;
+    }
+
+    &--img {
+      display: flex;
+      flex-direction: row;
+      border-bottom: 1.5px global.$silver solid;
+      // background-color: global.$silver;
+      // background
+    }
+
+    &--details {
+      display: flex;
+      flex-direction: column;
+      padding-left: 1rem;
+      padding-bottom: 1rem;
+      width: 100%;
+      border-bottom: 1.5px global.$silver solid;
+    }
+
+    .details__wrapper {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: center;
+      justify-content: space-between;
+
+      &--name {
+        font-family: global.$avenirnext-demi;
+      }
+
+      &--date {
+        font-family: global.$avenirnext-regular;
+        color: global.$silver;
+      }
+    }
+
+    .details-paragraph {
+      padding-top: 0.5rem;
+      font-family: global.$avenirnext-regular;
+    }
+  }
+
+  .details-wrapper {
+    display: flex;
+    flex-direction: row;
   }
 }
